tests/fail/fail_compound_assignment_text.kr
fn inisiu() {
    textu nome = "Ana";
    nome += " Maria";
}
